--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul>
-            <li>Characters</li>
+            <li><a href="Characters.html" target="_blank">Characters</a></li>
             <li>Spells</li>
             <li>Movies</li>
             <li id="click">Audio</li>
