--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="Characters.html" target="_blank">Characters</a></li>
-            <li>Spells</li>
+            <li><a href="Spells.html" target="_blank">Spells</a></li>
             <li>Movies</li>
             <li id="click">Audio</li>
         </ul>
