--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="Characters.html" target="_blank">Characters</a></li>
             <li><a href="Spells.html" target="_blank">Spells</a></li>
-            <li>Movies</li>
+            <li><a href="Movies.html" target="_blank">Movies</a></li>
             <li id="click">Audio</li>
         </ul>
     </nav>
