--- a/Spells.html
+++ b/Spells.html
@@ -132,6 +132,7 @@
         </section>
       </div>
       <div class="btn">
+        <button class="back">Please Turn Back</button>
         <button class="next">Please Turn Over</button>
       </div>
     </div>
